<resources>
    <string name="app_name">My Application1</string>
    <string name="back">返回</string>
    <string name="uc1">线性布局</string>
    <string name="uc2">相对布局</string>
    <string name="uc3">帧布局</string>
    <string name="uc4">表格布局</string>
    <string name="uc5">网络布局</string>
    <string name="uc_name">周逸飞</string>
    <string name="btn_1_1">水平布局</string>
    <string name="btn_1_2">垂直布局</string>
    <string name="btn_1_3">靠左对齐</string>
    <string name="btn_2_1">第一个按钮</string>
    <string name="btn_2_2">第二个按钮</string>
    <string name="btn_2_3">第三个按钮</string>
    <string name="btn_2_4">第四个按钮</string>
    <string name="btn_4_1">第一个BUTTON</string>
    <string name="btn_4_2">第二个BUTTON</string>
    <string name="btn_4_3">第三个BUTTON</string>
    <string name="btn_4_4">第四个BUTTON</string>
    <string name="v_5_1">1</string>
    <string name="v_5_2">2</string>
    <string name="v_5_3">3</string>
    <string name="v_5_4">4</string>
    <string name="v_5_5">5</string>
    <string name="v_5_6">6</string>
    <string name="v_5_7">7</string>
    <string name="v_5_8">8</string>
    <string name="v_5_9">9</string>
    <string name="v_5_10">0</string>
    <string name="v_5_11">+</string>
    <string name="v_5_12">-</string>
    <string name="v_5_13">*</string>
    <string name="v_5_14">/</string>
    <string name="v_5_15">=</string>
    <string name="handle">开始/停止</string>
</resources>
