<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UC5" >
        <GridLayout
            android:layout_width="match_parent"
            android:columnCount="3"
            android:layout_height="600dp"
            android:layout_columnWeight="1"
            android:useDefaultMargins="true"
            android:layout_gravity="fill"
            tools:context=".UC5" >
        <TextView
            android:text="@string/v_5_1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@drawable/textview_border"
            android:gravity="center"
            />
        <TextView
            android:text="@string/v_5_2"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@drawable/textview_border"
            android:gravity="center"/>
        <TextView
            android:text="@string/v_5_3"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@drawable/textview_border"
            android:gravity="center"/>
        <TextView
            android:text="@string/v_5_4"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@drawable/textview_border"
            android:gravity="center"/>
        <TextView
            android:text="@string/v_5_5"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@drawable/textview_border"
            android:gravity="center"
            />
        <TextView
            android:text="@string/v_5_6"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@drawable/textview_border"
            android:gravity="center"/>
        <TextView
            android:text="@string/v_5_7"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@drawable/textview_border"
            android:gravity="center"/>
        <TextView
            android:text="@string/v_5_8"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@drawable/textview_border"
            android:gravity="center"
            />
        <TextView
            android:text="@string/v_5_9"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@drawable/textview_border"
            android:gravity="center"/>
        <TextView
            android:text="@string/v_5_10"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@drawable/textview_border"
            android:gravity="center"/>
        <TextView
            android:text="@string/v_5_11"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@drawable/textview_border"
            android:gravity="center"/>
        <TextView
            android:text="@string/v_5_12"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@drawable/textview_border"
            android:gravity="center"/>
        <TextView
            android:text="@string/v_5_13"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@drawable/textview_border"
            android:gravity="center"/>
        <TextView
            android:text="@string/v_5_14"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@drawable/textview_border"
            android:gravity="center"/>
        <TextView
            android:text="@string/v_5_15"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@drawable/textview_border"
            android:gravity="center"/>
        </GridLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btn_back"
                    android:text="@string/back"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textview_border"
                    android:gravity="center"/>

        </LinearLayout>



</GridLayout>