<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UC2">

    <RelativeLayout
        android:id="@+id/xml_2"
        android:layout_width="match_parent"
        android:layout_height="600dp">

        <Button
            android:id="@+id/btn_2_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="50dp"
            android:layout_centerVertical="true"
            android:text="@string/btn_2_1" />

        <Button
            android:id="@+id/btn_2_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/btn_2_1"
            android:layout_marginBottom="50dp"
            android:text="@string/btn_2_2" />

        <Button
            android:id="@+id/btn_2_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_2_1"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="50dp"
            android:text="@string/btn_2_3" />

        <Button
            android:id="@+id/btn_2_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/btn_2_3"
            android:layout_below="@id/btn_2_2"
            android:text="@string/btn_2_4" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/xml_2"
        android:gravity="center">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back" />
    </RelativeLayout>
</RelativeLayout>